# Auto-Researches-Lite

./: .dockerignore  .gitignore  LICENSE  README.md  README.zh-CN.md
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/core/: __init__.py  config.py  database.py  deps.py  paths.py  security.py
backend/app/integrations/: __init__.py  auto_research.py  mineru.py
backend/app/models/: __init__.py  admin.py  content.py  context.py  enums.py  job.py  project.py  user.py
backend/app/scheduler/: __init__.py  run_scheduler.py
backend/app/schemas/: __init__.py  admin.py  auth.py  context.py  credential.py  discovery.py  job.py  project.py  site.py  zotero.py
backend/app/services/: __init__.py  api_test.py  chat_service.py  citations.py  code_repo.py  context_service.py  credentials.py  discovery_service.py  embeddings.py  export_service.py  fulltext.py  integration_service.py  job_control.py  llm.py  model_catalog.py  model_select.py  paper_db.py  paper_ingest_service.py  prompts.py  quota.py  retrieval.py  seed.py  site_service.py  zotero_service.py
backend/app/tests/: conftest.py  test_add_paper.py  test_ai_paper_finder.py  test_citations.py  test_code_repo.py  test_conferences.py  test_context.py  test_context_chat.py  test_discovery.py  test_discovery_dedup.py  test_effort_levels.py  test_false_success.py  test_integrations.py  test_jobs_cancel.py  test_mineru.py  test_mineru_reextract.py  test_model_api_style.py  test_model_catalog.py  test_model_health.py  test_paper_chat_and_code.py  test_paper_db.py  (+13 more)
(+82 files in other folders)
