[project]
name = "far-backend"
version = "0.1.0"
description = "Full Auto Research — backend API + workers"
requires-python = ">=3.11"
dependencies = [
    # web
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-multipart>=0.0.9",
    # db
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    # crypto (Fernet credential encryption)
    "cryptography>=42.0",
    # jobs / scheduling
    "rq>=1.16",
    "redis>=5.0",
    "apscheduler>=3.10",
    # pdf text extraction (MinerU offline fallback)
    "pypdf>=4.0",
    # integrations
    "pyzotero>=1.5",
    # stage-1 pipeline (Auto-Research runtime deps)
    "arxiv>=2.1",
    "scikit-learn>=1.4",
    "nltk>=3.8",
    "wordcloud>=1.9",
    "matplotlib>=3.8",
    "jieba>=0.42",
    "pyyaml>=6.0",
    "pytz>=2024.1",
    "python-dotenv>=1.0",
    "requests>=2.31",
    "httpx>=0.27",
    # llm providers (optional at runtime; used when keys present)
    "anthropic>=0.39",
    "openai>=1.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
markers = [
    "network: test requires outbound network access (e.g. arXiv API)",
]
filterwarnings = ["ignore::DeprecationWarning"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
